[gd_scene load_steps=3 format=2]

[ext_resource path="res://Police_menu.tres" type="DynamicFont" id=1]
[ext_resource path="res://Menu_Acceuil.gd" type="Script" id=2]

[node name="Menu_Acceuil" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Multijoueur_setup" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="heberger" type="Button" parent="Multijoueur_setup"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -350.0
margin_top = -140.0
margin_right = 350.0
margin_bottom = 10.0
custom_fonts/font = ExtResource( 1 )
text = "Heberger une partie"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="rejoindre" type="Button" parent="Multijoueur_setup"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -350.0
margin_top = 40.0
margin_right = 350.0
margin_bottom = 190.0
custom_fonts/font = ExtResource( 1 )
text = "Rejoindre une partie"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AdresseIP_serveur" type="LineEdit" parent="Multijoueur_setup"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -430.0
margin_top = 220.0
margin_right = 415.0
margin_bottom = 324.0
custom_fonts/font = ExtResource( 1 )
align = 1
placeholder_text = "Adresse IP du serveur"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="AdressIP_joueur" type="Label" parent="CanvasLayer"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -150.0
custom_fonts/font = ExtResource( 1 )
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Multijoueur_setup/heberger" to="." method="_on_heberger_pressed"]
[connection signal="pressed" from="Multijoueur_setup/rejoindre" to="." method="_on_rejoindre_pressed"]
